--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
-  "name": "universal-car-deal-scraper-gibson-ek",
+  "name": "universal-car-deal-scraper-stealth",
   "version": "1.0.0",
-  "description": "Scrape car listings from any website and display in a friendly table.",
+  "description": "Scrape car listings stealthily from any website",
   "main": "app.js",
   "scripts": {
     "start": "node app.js"
   },
   "dependencies": {
     "express": "^4.18.2",
-    "playwright": "^1.40.0"
+    "puppeteer-extra": "^3.3.4",
+    "puppeteer-extra-plugin-stealth": "^2.11.1",
+    "puppeteer": "^21.3.8"
   },
   "author": "Gibson EK High School",
   "license": "MIT"
