--- a/package.json
+++ b/package.json
@@ -4,12 +4,17 @@
   "description": "Universal Car Listing Scraper with Smart Stealth & Human Simulation",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js"
+    "start": "node app.js",
+    "test": "jest"
   },
   "dependencies": {
     "express": "^4.18.2",
+    "puppeteer": "^22.8.2",
     "puppeteer-extra": "^3.3.5",
-    "puppeteer-extra-plugin-stealth": "^2.11.1",
-    "puppeteer": "^22.8.2"
+    "puppeteer-extra-plugin-stealth": "^2.11.1"
+  },
+  "devDependencies": {
+    "jest": "^29.6.2",
+    "supertest": "^7.1.1"
   }
 }
